[gd_scene load_steps=10 format=3 uid="uid://r6s1y7uc8dcf"]

[ext_resource type="Script" path="res://Scenes/Main Menu.gd" id="1_dhl8a"]
[ext_resource type="Texture2D" uid="uid://rtdoilkakqy8" path="res://Art/Button.png" id="2_8ai8w"]
[ext_resource type="FontFile" uid="uid://pwg2u1lrabc3" path="res://Fonts/Fairy Font.ttf" id="2_umtut"]
[ext_resource type="VideoStream" path="res://Videos/Main Menu Video.ogv" id="3_5rf40"]
[ext_resource type="Texture2D" uid="uid://cj2d5v5jte81h" path="res://Art/Button2.png" id="3_ld4wt"]
[ext_resource type="Texture2D" uid="uid://cke31uf07no68" path="res://Art/Button3.png" id="4_efmbh"]
[ext_resource type="Texture2D" uid="uid://76fafx1qryfn" path="res://Art/Button4.png" id="5_lwb86"]
[ext_resource type="Texture2D" uid="uid://dxlxed5m614kn" path="res://Wildcards/Actions Have Consequences.png" id="8_xbmn5"]
[ext_resource type="Texture2D" uid="uid://boiaymj06ubji" path="res://Wildcards/Transfer Takeover.png" id="9_s5ftd"]

[node name="Main Menu Node" type="Node"]
script = ExtResource("1_dhl8a")
mainMenuFont = ExtResource("2_umtut")

[node name="Main Menu Video" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_5rf40")

[node name="Main Menu Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 30.0
offset_right = 1.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Play Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -140.0
offset_right = 8.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
icon = ExtResource("2_8ai8w")

[node name="Play Button Text" type="Label" parent="Play Button"]
layout_mode = 1
offset_right = 1.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="How to Play Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 8.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
icon = ExtResource("3_ld4wt")

[node name="How to Play Text" type="Label" parent="How to Play Button"]
layout_mode = 1
offset_left = 2.0
offset_right = 42.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Options Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 8.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
icon = ExtResource("4_efmbh")

[node name="Options Text" type="Label" parent="Options Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Credits Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 310.0
offset_right = 8.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
icon = ExtResource("5_lwb86")

[node name="Credits Text" type="Label" parent="Credits Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionsHaveConsequences" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1750, 850)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_xbmn5")

[node name="TransferTakeover" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1450, 850)
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_s5ftd")

[connection signal="mouse_entered" from="Play Button" to="." method="IfPlayButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Play Button" to="." method="IfPlayButtonIsExitedByMouse"]
[connection signal="pressed" from="Play Button" to="." method="IfPlayButtonIsPressed"]
[connection signal="mouse_entered" from="How to Play Button" to="." method="IfHowToPlayButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="How to Play Button" to="." method="IfHowToPlayButtonIsExitedByMouse"]
[connection signal="pressed" from="How to Play Button" to="." method="IfHowToPlayButtonIsPressed"]
[connection signal="mouse_entered" from="Options Button" to="." method="IfOptionsButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Options Button" to="." method="IfOptionsButtonIsExitedByMouse"]
[connection signal="pressed" from="Options Button" to="." method="IfOptionsButtonIsPressed"]
[connection signal="mouse_entered" from="Credits Button" to="." method="IfCreditsButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Credits Button" to="." method="IfCreditsButtonIsExitedByMouse"]
[connection signal="pressed" from="Credits Button" to="." method="IfCreditsButtonIsPressed"]
